Fix Dark Mode

--- a/static/main.css
+++ b/static/main.css
@@ -5,11 +5,6 @@
 @tailwind utilities;
 
 body {
-  background-color: #f7fafc;
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #1a202c;
-  }
+  @apply text-white;
+  @apply bg-gray-900;
 }
